<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dashboard"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/footer" />

    <include layout="@layout/buttons_create_exam" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons_create_exam"
        android:layout_alignParentTop="true"
        android:overScrollMode="always">

        <LinearLayout
            android:id="@+id/create_exam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subject"
                android:textSize="@dimen/default_font_size" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_subject"
                android:inputType="textAutoComplete" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="@dimen/default_font_size" />

            <EditText
                android:id="@+id/input_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/yyyy_mm_dd"
                android:importantForAutofill="no"
                android:inputType="date" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic"
                android:textSize="@dimen/default_font_size" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/topic_list"
                android:layout_width="0dp"
                android:layout_height="0dp"
                tools:ignore="NestedScrolling"
                tools:listitem="@layout/dashboard_recyclerview_item" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>