<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin"
    tools:context=".ExamDetailFragment">

    <TextView
        android:id="@+id/exam_name"
        style="@style/Widget.nEXam.TextView"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Subject" />

    <Switch
        android:id="@+id/switch_finished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:switchMinWidth="56dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="@dimen/margin"
        android:text="Finished:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exam_name"/>

   <TextView
        android:id="@+id/finished_Label"
        style="@style/Widget.nEXam.TextView"
        android:layout_width="wrap_content"
        android:textColor="?android:colorPrimary"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_finished"
        tools:text="Finished" />

    <TextView
        android:id="@+id/date"
        style="@style/Widget.nEXam.TextView"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exam_name"
        tools:text="Date" />

    <TextView
        android:id="@+id/difficulty"
        style="@style/Widget.nEXam.TextView"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date"
        tools:text="Difficulty" />

    <TextView
        android:id="@+id/remainingTime"
        style="@style/Widget.nEXam.TextView"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficulty"
        tools:text="Remaining Time" />

    <ScrollView
        android:id="@+id/additionalNotes_ScrollView"
        android:layout_width="match_parent"
        android:layout_height="400px"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@+id/remainingTime">

        <TextView
            android:id="@+id/additionalNotes"
            style="@style/Widget.nEXam.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="additional Notes" />
    </ScrollView>

    <Button
        android:id="@+id/startTimer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/startTimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/additionalNotes_ScrollView" />

    <Button
        android:id="@+id/stopTimer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/stopTimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startTimer" />

    <Button
        android:id="@+id/delete_exam"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stopTimer" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_exam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_between_elements"
        android:layout_marginBottom="@dimen/margin_between_elements"
        android:contentDescription="@string/edit_exam"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>